force-app/main/default/objects/Order__c/fields/abandoned_checkout_url__c.field-meta.xml
<CustomField>
    <fullName>abandoned_checkout_url__c</fullName>
    <label>abandoned_checkout_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>