force-app/main/default/objects/Order__c/fields/Abondoned_Cart_to_Confirm_Order__c.field-meta.xml
<CustomField>
    <fullName>Abondoned_Cart_to_Confirm_Order__c</fullName>
    <label>Abondoned Cart to Confirm Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>By Mistake</fullName>
            </value>
            <value>
                <fullName>No COD Option</fullName>
            </value>
            <value>
                <fullName>Price High</fullName>
            </value>
            <value>
                <fullName>Want Discount</fullName>
            </value>
            <value>
                <fullName>Just Browsing / Checking</fullName>
            </value>
            <value>
                <fullName>Will Add One More Product &amp; Then Place Order</fullName>
            </value>
            <value>
                <fullName>Will Confirm Later</fullName>
            </value>
            <value>
                <fullName>Delivery Charge</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Coupon Code Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>