force-app/main/default/objects/Order__c/fields/Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_PostalCode__c</fullName>
    <label>Billing PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>