force-app/main/default/objects/Order__c/fields/Confirmed_Orders_to_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Orders_to_Cancelled__c</fullName>
    <label>Confirmed Orders to Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Mistake Placed Order</fullName>
            </value>
            <value>
                <fullName>Price is High</fullName>
            </value>
            <value>
                <fullName>Change of Plan</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Change Product</fullName>
            </value>
            <value>
                <fullName>Delivery Charge</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Will Add One More Product &amp; Then Place Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>