force-app/main/default/objects/Order__c/fields/Direct_RTO_Orders__c.field-meta.xml
<CustomField>
    <fullName>Direct_RTO_Orders__c</fullName>
    <label>Direct RTO Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Fake Remark By Courier Boy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>