force-app/main/default/objects/Order__c/fields/FollowUp_Count__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Count__c</fullName>
    <label>FollowUp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>