force-app/main/default/objects/Order__c/fields/Initial_FollowUp_Comment__c.field-meta.xml
<CustomField>
    <fullName>Initial_FollowUp_Comment__c</fullName>
    <label>Initial FollowUp Comment</label>
    <type>TextArea</type>
</CustomField>