force-app/main/default/objects/Order__c/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <formula>IF(
        ISPICKVAL(Status__c, &quot;Voided&quot;),
        1,
        0
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>