force-app/main/default/objects/Order__c/fields/Is_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Delayed__c</fullName>
    <formula>IF(
        ISPICKVAL(Order_Delivery_Status__c , &quot;delayed&quot;),
        1,
        0
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Delayed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>