force-app/main/default/objects/Order__c/fields/Is_NDR__c.field-meta.xml
<CustomField>
    <fullName>Is_NDR__c</fullName>
    <label>Is NDR</label>
    <summaryFilterItems>
        <field>Delivery_Track__c.Final_Status__c</field>
        <operation>equals</operation>
        <value>NDR</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery_Track__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>