force-app/main/default/objects/Order__c/fields/Is_RTO__c.field-meta.xml
<CustomField>
    <fullName>Is_RTO__c</fullName>
    <label>Is RTO</label>
    <summaryFilterItems>
        <field>Delivery_Track__c.Final_Status__c</field>
        <operation>equals</operation>
        <value>RTO</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery_Track__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>