force-app/main/default/objects/Order__c/fields/IsAbandontoConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsAbandontoConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Abandon to Confirm</label>
    <type>Checkbox</type>
</CustomField>