force-app/main/default/objects/Order__c/fields/Last_Delivery_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delivery_Status_Change_Date__c</fullName>
    <label>Last Delivery Status Change Date</label>
    <type>DateTime</type>
</CustomField>