force-app/main/default/objects/Order__c/fields/NDR__c.field-meta.xml
<CustomField>
    <fullName>NDR__c</fullName>
    <formula>IF( Is_NDR__c &gt;0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>