force-app/main/default/objects/Order__c/fields/NDR_to_RTO_Orders__c.field-meta.xml
<CustomField>
    <fullName>NDR_to_RTO_Orders__c</fullName>
    <label>NDR to RTO Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>RTO Confirmed</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Out of Station</fullName>
            </value>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Short Address Issue</fullName>
            </value>
            <value>
                <fullName>Fake Remark By Courier Boy</fullName>
            </value>
            <value>
                <fullName>Did Not Order</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>