force-app/main/default/objects/Order__c/fields/Next_FollowUp_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_FollowUp_Time__c</fullName>
    <label>Next FollowUp Time</label>
    <type>DateTime</type>
</CustomField>