force-app/main/default/objects/Order__c/fields/OFD_to_NDR_Orders__c.field-meta.xml
<CustomField>
    <fullName>OFD_to_NDR_Orders__c</fullName>
    <label>OFD to NDR Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Out of Station</fullName>
            </value>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Late Delivery Don&apos;t Want Now</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Short Address Issue</fullName>
            </value>
            <value>
                <fullName>Fake Remark By Courier Boy</fullName>
            </value>
            <value>
                <fullName>Did Not Order</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>