force-app/main/default/objects/Order__c/fields/Order_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Cancel_Date__c</fullName>
    <label>Order Cancel Date</label>
    <type>DateTime</type>
</CustomField>