force-app/main/default/objects/Order__c/fields/Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation__c</fullName>
    <label>Order Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>Specific Date Delivery</fullName>
            </value>
            <value>
                <fullName>Ship After X Days</fullName>
            </value>
            <value>
                <fullName>Gift Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>