force-app/main/default/objects/Order__c/fields/Order_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivery_Status__c</fullName>
    <label>Order Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>PENDING PICKUP</fullName>
            </value>
            <value>
                <fullName>picked up</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
                <default>true</default>
                <label>Manifest</label>
            </value>
            <value>
                <fullName>in transit</fullName>
            </value>
            <value>
                <fullName>undelivered</fullName>
            </value>
            <value>
                <fullName>delayed</fullName>
            </value>
            <value>
                <fullName>PICKUP DONE</fullName>
            </value>
            <value>
                <fullName>picked up1</fullName>
            </value>
            <value>
                <fullName>INTRANSIT</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>NDR</fullName>
            </value>
            <value>
                <fullName>Confirmed Orders of Shopify</fullName>
            </value>
            <value>
                <fullName>rto in transit</fullName>
            </value>
            <value>
                <fullName>shortage</fullName>
            </value>
            <value>
                <fullName>rto processing</fullName>
            </value>
            <value>
                <fullName>reached at origin</fullName>
            </value>
            <value>
                <fullName>rto delivered</fullName>
            </value>
            <value>
                <fullName>misrouted</fullName>
            </value>
            <value>
                <fullName>rto out for delivery</fullName>
            </value>
            <value>
                <fullName>out of delivery area</fullName>
            </value>
            <value>
                <fullName>rto undelivered</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>