force-app/main/default/objects/Order__c/fields/Order_Processed_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Processed_Time__c</fullName>
    <label>Order Processed Time</label>
    <type>DateTime</type>
</CustomField>