force-app/main/default/objects/Order__c/fields/Order_Status_Url__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Url__c</fullName>
    <label>Order Status Url</label>
    <type>Url</type>
</CustomField>