force-app/main/default/objects/Order__c/fields/OUT_FOR_DELIVERY__c.field-meta.xml
<CustomField>
    <fullName>OUT_FOR_DELIVERY__c</fullName>
    <formula>IF( Is_OUT_FOR_DELIVERY__c &gt;0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OUT FOR DELIVERY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>