force-app/main/default/objects/Order__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>