force-app/main/default/objects/Order__c/fields/Pending_Followup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pending_Followup_Time__c</fullName>
    <label>Pending Followup Time</label>
    <summarizedField>Order_Follow_Up__c.Expected_Follow_Up_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Follow_Up__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Follow_Up__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>