force-app/main/default/objects/Order__c/fields/RTO__c.field-meta.xml
<CustomField>
    <fullName>RTO__c</fullName>
    <formula>IF( Is_RTO__c &gt;0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>