force-app/main/default/objects/Order__c/fields/RTO_to_Reship_Confirm_Orders__c.field-meta.xml
<CustomField>
    <fullName>RTO_to_Reship_Confirm_Orders__c</fullName>
    <label>RTO to Reship Confirm Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>Reship Confirmed</fullName>
            </value>
            <value>
                <fullName>Want But Later</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>