force-app/main/default/objects/Order__c/fields/Shipping_Chanrge__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Chanrge__c</fullName>
    <label>Shipping Chanrge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>