force-app/main/default/objects/Order__c/fields/Shipping_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_PostalCode__c</fullName>
    <label>Shipping PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>