force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
                <default>true</default>
                <label>Confirm</label>
            </value>
            <value>
                <fullName>voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>