force-app/main/default/objects/Order__c/fields/Tax_Title__c.field-meta.xml
<CustomField>
    <fullName>Tax_Title__c</fullName>
    <label>Tax Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>