force-app/main/default/objects/Order__c/fields/Track_Id__c.field-meta.xml
<CustomField>
    <fullName>Track_Id__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>