force-app/main/default/objects/Order__c/fields/Tracking_Company__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Company__c</fullName>
    <label>Tracking Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>