force-app/main/default/objects/Order__c/fields/Trello_Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Trello_Card_Id__c</fullName>
    <label>Trello Card Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>