force-app/main/default/objects/Order__c/fields/Vendor_Store__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Store__c</fullName>
    <label>Vendor Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIERY FLAIR</fullName>
            </value>
            <value>
                <fullName>CDL FINESHINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>