force-app/main/default/objects/Order__c/recordTypes/Abandoned_Order.recordType-meta.xml
<RecordType>
    <fullName>Abandoned_Order</fullName>
    <active>true</active>
    <label>Abandoned Order</label>
</RecordType>