force-app/main/default/objects/Order__c/recordTypes/Confirm_Order.recordType-meta.xml
<RecordType>
    <fullName>Confirm_Order</fullName>
    <active>true</active>
    <label>Confirm Order</label>
</RecordType>