force-app/main/default/objects/Order__c/recordTypes/Voided.recordType-meta.xml
<RecordType>
    <fullName>Voided</fullName>
    <active>true</active>
    <label>Voided</label>
</RecordType>