force-app/main/default/objects/Order__c/validationRules/Restrict_Confirm_to_Abandon.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Confirm_to_Abandon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c), ISPICKVAL(Status__c, &apos;Abandoned&apos;), PRIORVALUE(Status__c) = &apos;Confirm&apos;)</errorConditionFormula>
    <errorMessage>You can not change Status From Confirm to Abandoned. .</errorMessage>
</ValidationRule>