force-app/main/default/objects/Order__c/validationRules/Restrict_Voided_to_Confirm_or_Abandon.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Voided_to_Confirm_or_Abandon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  OR(
    AND(ISPICKVAL(Status__c, &apos;Abandoned&apos;), ISPICKVAL(PRIORVALUE(Status__c), &apos;voided&apos;)),
    AND(ISPICKVAL(Status__c, &apos;Confirm&apos;), ISPICKVAL(PRIORVALUE(Status__c), &apos;voided&apos;))
  )
)</errorConditionFormula>
    <errorMessage>You can not change Status From voided to Abandoned	 or Confirm.</errorMessage>
</ValidationRule>