force-app/main/default/objects/Order__c/listViews/All_Shopify_Orders.listView-meta.xml
<ListView>
    <fullName>All_Shopify_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Order_Amount__c</columns>
    <columns>Order_Delivery_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Shopify Orders</label>
</ListView>