force-app/main/default/objects/Order__c/listViews/Shopify_Abandoned_Order.listView-meta.xml
<ListView>
    <fullName>Shopify_Abandoned_Order</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Order_Amount__c</columns>
    <columns>Order_Delivery_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Abandoned_Order</value>
    </filters>
    <label>Shopify Abandoned Order</label>
</ListView>